...
          title="Edit"
          onPress={run(actions.onEdit)}
        />
      ) : null}
      {isSelf ? null : !isDeleted ? (
        <Menu.Item
          testID="people-action-deactivate"
          leadingIcon="account-minus-outline"
          title="Deactivate"
          onPress={run(actions.onDeactivate)}
        />
      ) : (
        <Menu.Item
          testID="people-action-restore"
          leadingIcon="restore"
          title="Restore"
          onPress={run(actions.onRestore)}
        />
      )}
      {isSelf ? null : (
...
